implemented task with new resource model, commented out non conformant code until I get to it
